--- a/mc/lib/Makefile
+++ b/mc/lib/Makefile
@@ -1,5 +1,4 @@
 MCU = atmega328p
-MCU = attiny85
 F_CPU = 16000000
 
 ARDUINO = /usr/share/arduino/hardware/arduino/cores/arduino
@@ -9,7 +8,7 @@ TARGET = libtest
 
 SRC =
 
-CXXSRC = rfm12b.cpp
+CXXSRC = rfm12b.cpp $(ARDUINO)/main.cpp
 
 MAKEFILE = Makefile
 
@@ -60,69 +59,11 @@ all: build
 
 build: elf
 
-elf: $(TARGET).elf
-lss: $(TARGET).lss
-sym: $(TARGET).sym
+defs:
+	gcc libtest.cpp && ./a.out
 
-.SUFFIXES: .elf .lss .sym
-
-# Create extended listing file from ELF output file.
-.elf.lss:
-	$(OBJDUMP) -h -S $< > $@
-
-# Create a symbol table from ELF output file.
-.elf.sym:
-	$(NM) -n $< > $@
-
-
-
-# Link: create ELF output file from object files.
-$(TARGET).elf: $(OBJ)
-	$(CC) $(ALL_CFLAGS) $(OBJ) --output $@ $(LDFLAGS)
-
-
-# Compile: create object files from C++ source files.
-%.o: $(ARDUINO)/%.cpp
-	$(CXX) -c $(ALL_CXXFLAGS) $< -o $@ 2>&1 | colorgcc
-
-%.o: %.cpp
-	$(CXX) -c $(ALL_CXXFLAGS) $< -o $@ 2>&1 | colorgcc
-
-# Compile: create object files from C source files.
-%.o: $(ARDUINO)/%.c
-	$(CC) -c $(ALL_CFLAGS) $< -o $@ 2>&1 | colorgcc
-
-%.o: %.c
-	$(CC) -c $(ALL_CFLAGS) $< -o $@ 2>&1 | colorgcc
-
-# Compile: create assembler files from C source files.
-.cpp.s:
-	$(CC) -S $(ALL_CFLAGS) $< -o $@
-
-.c.s:
-	$(CC) -S $(ALL_CFLAGS) $< -o $@
-
-
-# Assemble: create object files from assembler source files.
-.S.o:
-	$(CC) -c $(ALL_ASFLAGS) $< -o $@
-
-
-
-# Target: clean project.
-clean:
-	$(REMOVE) test.elf test.map test.sym test.lss \
-	$(OBJ) $(LST) $(SRC:.c=.s) $(SRC:.c=.d) $(CXXSRC:.cpp=.s) $(CXXSRC:.cpp=.d)
-
-depend:
-	if grep '^# DO NOT DELETE' $(MAKEFILE) >/dev/null; \
-	then \
-		sed -e '/^# DO NOT DELETE/,$$d' $(MAKEFILE) > \
-			$(MAKEFILE).$$$$ && \
-		$(MV) $(MAKEFILE).$$$$ $(MAKEFILE); \
-	fi
-	echo '# DO NOT DELETE THIS LINE -- make depend depends on it.' \
-		>> $(MAKEFILE); \
-	$(CC) -M -mmcu=$(MCU) $(CDEFS) $(CINCS) $(SRC) $(ASRC) >> $(MAKEFILE)
+include ../lib/make/elf.mk
+include ../lib/make/gcc.mk
+include ../lib/make/check.mk
 
 .PHONY:	all build elf lss sym program clean depend
