tx works on 49.2k (not reliable)

--- a/mc/blink-t85/Makefile
+++ b/mc/blink-t85/Makefile
@@ -54,7 +54,7 @@ LDFLAGS = -Wl,--gc-sections -ffunction-sections
 AVRDUDE_PROGRAMMER = stk500v1
 AVRDUDE_PORT = $(PORT)
 AVRDUDE_WRITE_FLASH = -U flash:w:$(TARGET).hex
-AVRDUDE_FLAGS = \
+AVRDUDE_FLAGS = -q -q \
   -p $(MCU) -P $(AVRDUDE_PORT) -c $(AVRDUDE_PROGRAMMER) \
   -b $(UPLOAD_RATE)
 
