wip: reading internal sensor

--- a/mc/node12/Makefile
+++ b/mc/node12/Makefile
@@ -13,7 +13,8 @@ SRC = \
     $(LIB)/dbg_uart.c \
     $(LIB)/rfm12b.c \
     $(LIB)/timer.c \
-    $(LIB)/power.c
+    $(LIB)/power.c \
+    $(LIB)/tinyt.c
 
 ASRC = \
     $(LIB)/basic_serial.S
